# commeta-menu-service

./: .env.dist  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml  qr_code.py
admin/: pyproject.toml
admin/apps/orders/: admin.py  apps.py  models.py  signals.py
admin/apps/orders/migrations/: 0001_initial.py
admin/apps/products/: admin.py  apps.py  models.py  signals.py
admin/apps/products/migrations/: 0001_initial.py
admin/apps/restaurants/: admin.py  models.py
admin/apps/restaurants/migrations/: 0001_initial.py
admin/config/: settings.py  urls.py
app/: config.py
app/api/: __main__.py
app/api/controllers/: __init__.py  cart_items.py  carts.py  discounts.py  dish.py  dish_params.py  menu.py  order.py  params.py  product.py  restaurant.py  restaurants.py
app/api/dependencies/: __init__.py
app/api/schems/: __init__.py  order.py  product.py  restaraunt.py
app/dto/: __init__.py  base.py  order.py  product.py  restaurant.py
app/infrastructure/database/alembic/: env.py
app/infrastructure/database/alembic/versions/: 196f15b714c7_initial_migration.py  621078d3739c_update_models.py  (+9 more)
app/infrastructure/database/dao/: holder.py
app/infrastructure/database/models/: __init__.py  base.py  order.py  product.py  restaurant.py  utils.py
docker/admin/: Dockerfile  adminentry.sh
docker/api/: Dockerfile  apientry.sh
kubernetes/: deployment-admin.yaml  deployment-api.yaml  deployment-db.yaml  deployment.yaml  qr_menu.yaml  service-admin.yaml  service-api.yaml  service-db.yaml  service.yaml
tests/: qr_code.py
(+6 files in other folders)
