[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["murtazox04 <murtazox04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
django = "^5.0.6"
django-unfold = "^0.29.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
